# ownyourship

./: .gitattributes  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  handoff.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
ownyourship/: __init__.py  callgraph.py  config.py  db.py  diagram.py  grader.py  labels.py  main.py  quiz.py  scanner.py  server.py
ownyourship/static/: app.js  index.html  style.css
tests/: conftest.py  test_callgraph.py  test_config.py  test_db.py  test_diagram.py  test_grader.py  test_labels.py  test_quiz.py  test_scanner.py  test_server.py
