[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ownyourship"
version = "0.1.0"
description = "Quiz yourself on your own vibe-coded projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
oys = "ownyourship.main:entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["ownyourship*"]

[tool.setuptools.package-data]
ownyourship = ["static/*"]
