[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ownyourship"
version = "0.1.0"
description = "Quiz yourself on your own vibe-coded projects"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jem Herbert-Rice" }]
keywords = ["cli", "quiz", "code-comprehension", "anthropic", "claude", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/JemHRice/ownyourship"
Repository = "https://github.com/JemHRice/ownyourship"
Issues = "https://github.com/JemHRice/ownyourship/issues"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
oys = "ownyourship.main:entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["ownyourship*"]

[tool.setuptools.package-data]
ownyourship = ["static/*"]
